--- a/view/components/admin/settings/settings.json
+++ b/view/components/admin/settings/settings.json
@@ -1,6 +1,7 @@
 {
     "labels": {
         "dirver": "Drivers",
-        "ipn": "Ipn"
+        "ipn": "Ipn",
+        "redirects": "Redirects"
     }
 }
