--- a/view/components/admin/settings/settings.json
+++ b/view/components/admin/settings/settings.json
@@ -3,5 +3,8 @@
         "dirver": "Drivers",
         "ipn": "Ipn",
         "redirects": "Redirects"
+    },
+    "message": {
+        "demo": "Disabled in DEMO"
     }
 }
